<?php


interface CreditPayment
{

    public function approve();

    public function send();
}

