<?php


class Visa implements PaymentSource
{

    /**
     * @return mixed
     */
    public function send()
    {
        // TODO: Implement send() method.
    }

    /**
     * @return mixed
     */
    public function approve()
    {
        // TODO: Implement approve() method.
    }
}